fix dropdown overflow and api proxy

--- a/src/component-library/site-components/ImageAndTextBlock/ImageAndTextBlock.module.scss
+++ b/src/component-library/site-components/ImageAndTextBlock/ImageAndTextBlock.module.scss
@@ -3,7 +3,7 @@
 
 .background {
   background: var(--background);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .wrapper {
